--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "homepage": "https://github.com/betrybe/sd-0x-project-delivery-app#readme",
   "devDependencies": {
     "@faker-js/faker": "6.0.0",
-    "axios": "0.26.1",
     "dotenv": "16.0.0",
     "jest": "27.5.1",
     "jest-puppeteer": "6.1.0",
@@ -56,6 +55,7 @@
     }
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "jest-resolve": "^29.4.1"
   }
 }
