--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.9'
 services:
   frontend:
     container_name: app_frontend
-    build: ./front-end
+    image: node:alpine
+    command: sh -c "npm install; npm start"
     ports:
       - 3000:3000
     working_dir: /app-frontend
@@ -19,7 +20,8 @@ services:
       retries: 5
   backend:
     container_name: app_backend
-    build: ./back-end
+    image: node:alpine
+    command: sh -c "npm install; npm start"
     ports:
       - 3001:3001
     working_dir: /app-backend
@@ -37,6 +39,7 @@ services:
       - MYSQL_PASSWORD=password
       - MYSQL_HOST=db
       - MYSQL_PORT=3306
+      - MYSQL_DATABASE= mydb
     healthcheck:
       test: ["CMD", "lsof", "-t", "-i:3001"] # Caso utilize outra porta interna para o back, altere ela aqui também
       timeout: 10s
@@ -49,6 +52,7 @@ services:
       - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=password
+      - MYSQL_DATABASE= mydb
     restart: 'always'
     healthcheck:
       test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"] # Deve aguardar o banco ficar operacional
